--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <h1>Hola hasta html</h1>
     <div class="flex-container">
 
         <div style="background-color: red;"> 1 </div>
